May13th Hareal moonstone.ttf with perfect middle-aligned glyphs; adjusted line-height/reduced the use of line-height for the video-player controls; fixed a minor error in VideoFeedback.js which will result more clean parsed HTML

--- a/css/VideoControlFullscreen.less
+++ b/css/VideoControlFullscreen.less
@@ -91,6 +91,7 @@
 	background-position: 0px 0px;
 	background-size: @moon-icon-button-size (@moon-icon-button-size * 2);
 	color: @moon-icon-video-controls-font-color;
+	line-height: @moon-icon-button-size;
 }
 .moon-icon-playpause-font-style {
   font-size: @moon-icon-playpause-font-size;
@@ -107,7 +108,6 @@
 }
 .moon-icon-button.moon-icon-video-more-controls-font-style {
   font-size: @moon-icon-arrowextendshrink-font-size;
-  line-height: @moon-icon-arrowextendshrink-line-height;
 }
 .moon-video-fullscreen-control .moon-icon.moon-icon-button.active,
 .moon-video-fullscreen-control .moon-icon.moon-icon-button:active,
