--- a/css/VideoFullScreenToggleButton.less
+++ b/css/VideoFullScreenToggleButton.less
@@ -1,4 +1,4 @@
 .moon-icon-exitfullscreen.moon-icon-exitfullscreen-font-style {
 	font-size: @moon-video-icon-exitfullscreen-font-size;
-	line-height: @moon-video-icon-exitfullscreen-line-height;
+	line-height: @moon-icon-button-size;
 }
