--- a/css/moonstone-variables.less
+++ b/css/moonstone-variables.less
@@ -15,18 +15,19 @@
 
 /* Icon Font */
 /* ---------------------------------------*/
-@moon-icon-arrowlargeup:      "\0F0000";
+@moon-icon-drawer:            "\0F0000";
 @moon-icon-arrowlargedown:    "\0F0001";
-@moon-icon-arrowlargeleft:    "\0F0002";
-@moon-icon-arrowlargeright:   "\0F0003";
-@moon-icon-arrowsmallup:      "\0F0004";
-@moon-icon-arrowsmalldown:    "\0F0005";
-@moon-icon-arrowsmallleft:    "\0F0006";
-@moon-icon-arrowsmallright:   "\0F0007";
-@moon-icon-closex:            "\0F0008";
-@moon-icon-check:             "\0F0009";
-@moon-icon-search:            "\0F0010";
-@moon-icon-drawer:            "\0F0011";
+@moon-icon-arrowlargeup:      "\0F0002";
+@moon-icon-arrowlargeleft:    "\0F0003";
+@moon-icon-arrowlargeright:   "\0F0004";
+@moon-icon-arrowsmallup:      "\0F0005";
+@moon-icon-arrowsmalldown:    "\0F0006";
+@moon-icon-arrowsmallleft:    "\0F0007";
+@moon-icon-arrowsmallright:   "\0F0008";
+@moon-icon-closex:            "\0F0009";
+@moon-icon-check:             "\0F000A";
+@moon-icon-search:            "\0F000B";
+@moon-icon-exitfullscreen:    "\0F0011";
 @moon-icon-fullscreen:        "\0F0012";
 @moon-icon-circle:            "\0F0013";
 @moon-icon-stop:              "\0F0014";
@@ -44,7 +45,6 @@
 @moon-icon-jumpbackward:      "\0F0020";
 @moon-icon-arrowshrink:       "\0F0021";
 @moon-icon-arrowextend:       "\0F0022";
-@moon-icon-exitfullscreen:    "\0F0023";
 
 /* Font Sizes */
 
@@ -256,9 +256,9 @@
 @moon-icon-playpause-font-size:                    220px;
 @moon-icon-main-control-font-size:                 190px;
 @moon-icon-arrowextendshrink-font-size:            112px;
-@moon-icon-arrowextendshrink-line-height:          64px;
 @moon-video-feedback-icon-width:                   32px;
 @moon-video-feedback-icon-font-size:               124px;
+@moon-video-feedback-icon-line-height:             26px;
 @moon-video-feedback-icon-pausejumpbackward-width: 37px;
 @moon-video-feedback-icon-pausejumpforward-width:  37px;
 @moon-video-feedback-icon-play-width:              22px;
